
[workspace]
members = ["traits"]

[package]
name = "penum"
version = "0.1.15"
edition = "2021"
description = "Make enum conform to a given pattern"
license = "MIT OR Apache-2.0"
keywords = ["enum", "pattern", "shape", "macro", "proc-macro"]
authors = ["Viktor Lott"]
categories = [
    "development-tools::testing",
    "development-tools::procedural-macro-helpers",
]
repository = "https://github.com/viktorlott/penum"

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"
rustfmt = "0.10.0"
syn = { version = "1.0.109", features = ["full", "visit", "visit-mut", "extra-traits"] }
trybuild = "1.0.79"
