
[workspace]
members = ["traits"]

[package]
name = "penum"
version = "0.1.29"
edition = "2021"
description = "Make enum conform to a given pattern"
license = "MIT OR Apache-2.0"
keywords = ["enum", "pattern", "shape", "macro", "proc-macro"]
authors = ["Viktor Lott"]
readme = "README.md"
categories = [
    "development-tools::testing",
    "development-tools::procedural-macro-helpers",
]
repository = "https://github.com/viktorlott/penum"

[lib]
proc-macro = true
doctest = false

[dependencies]
cargo-release = "0.24.8"
itertools = "0.13.0"
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = { version = "1.0.109", features = [
    "full",
    "visit",
    "visit-mut",
    "extra-traits",
] }
trybuild = "1.0.79"
time = "0.3.35"


[features]
default = ["dispatch-std"]
dispatch-custom = []
dispatch-std = []


[package.metadata.release]
pre-release-replacements = [
    { file = "README.md", search = "penum = \"[a-z0-9\\.-]+\"", replace = "penum = \"{{version}}\"" },
]
pre-release-hook = ["./hook.sh"]
pre-release-commit-message = "chore: Release v{{version}}"
